# Esercitazioni-PCS

Esercitazione1/: CMakeLists.txt  es_city.cpp  inputcity.txt  printarg.cpp  prog  prova
Esercitazione1/build_es1/: CMakeCache.txt  Makefile  cmake_install.cmake  prog
Esercitazione2/: CMakeLists.txt  bubblesort.cpp  es_primialgoritmi.cpp  esempio.cpp
Esercitazione3/: CMakeLists.txt  rational.hpp  testrational.cpp
Esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorting_algorithms.h  test_bubblesort.cpp  test_insertionsort.cpp
Esercitazione5/: CMakeLists.txt  considerazioni.txt  debug.csv  grafici.m  measure_sorts.cpp  relese.csv  sort.csv  sorting_algorithms.h  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_quicksort_ottimo.cpp  test_selectionsort.cpp
Esercitazione6/: CMakeLists.txt  graph.hpp  testgrafi.cpp
Esercitazione9/: CMakeLists.txt  coda_pila.hpp  graph.hpp  test_visita.cpp  visita_grafi.hpp
